# gh-repo-stats

./: Cargo.toml  Readme.md
.github/workflows/: ci.yaml
src/: main.rs
