[package]
name = "gh-repo-stats"
version = "0.1.0"
authors = ["magnus kulke <mkulke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
parse_link_header = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
csv = "1.1"

[dev-dependencies]
mockito = "0.29"
